# docker/docker-compose-thomas-revised/service1/src/swagger.yaml
@@ -78,9 +78,10 @@ paths:
 definitions:
   UserRegisterBase:
     required:
-      - email
+      - name
+      - address
       - password
-      - userId
+      - email
     type: object
     properties:
       name:
