# docker/docker-compose-thomas-revised/service2/routes/user.js
@@ -1,9 +1,11 @@
 export function routes(router) {
     router
         .get('/user/:email', (req, res) => {
+            
+            
             res.json({
-                name: `Enrique Sanchez`,
-                address: `Makati City`,
+                name: `enrique`,
+                address: `Makati`,
                 // password: ' ', not needed???
                 email: req.params.email
             })
